--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ API_BASE_URL="url-deepseek"
 Open_key1="key-Open-AI"
 
 #Data Postgres
-DATABASE_NAME="name-project"
-USER_DB="user_db"
-PASSWORD="password_db"
+DB_NAME="name-project"
+DB_USER="user_db"
+DB_PASSWORD="password_db"
 HOST="localhost"
 PORT="port_db"
