--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "matplotlib>=3.10.8",
     "openai>=2.8.1",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pylance>=0.39.0",
     "python-dotenv>=1.2.1",
+    "seaborn>=0.13.2",
 ]
