--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "django==6.0",
     "matplotlib>=3.10.8",
     "openai>=2.8.1",
     "openpyxl>=3.1.5",
