--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "django-extensions>=4.1",
     "django==6.0",
     "matplotlib>=3.10.8",
     "openai>=2.8.1",
@@ -13,4 +14,5 @@ dependencies = [
     "pylance>=0.39.0",
     "python-dotenv>=1.2.1",
     "seaborn>=0.13.2",
+    "psycopg2>=2.9.11",
 ]
