--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ DB_USER="user_db"
 DB_PASSWORD="password_db"
 HOST="localhost"
 PORT="port_db"
+
+#Create super User - Django Admin
+username="django-admin-user"
+email="django-admin-email"
+pass="django-admin-pass"
+confirm_pass="django-admin-pass"
