--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
     ports:
       - "${PORT}:5432"
     volumes:
+      # - postgres_data:/var/lib/postgresql/data
+      # - ./sql/version_1:/docker-entrypoint-initdb.d
       - postgres_data:/var/lib/postgresql/data
-      - ./sql/version_1:/docker-entrypoint-initdb.d
+      - ./sql/version_2_django:/docker-entrypoint-initdb.d
 
 volumes:
   postgres_data:
